add list template and bind the model

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/sspringer82/nodeweb#readme",
   "dependencies": {
+    "ejs": "^2.5.7",
     "express": "^4.16.1"
   },
   "devDependencies": {
